--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ville Lohkovuori",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.8.1"
   }
 }
